[gd_scene load_steps=10 format=3 uid="uid://dl5upq3c1qtbq"]

[ext_resource type="Script" uid="uid://dk41ybm2w2p7b" path="res://scripts/effects/special.gd" id="1_lih14"]
[ext_resource type="Texture2D" uid="uid://dt3ja6hjeoy0m" path="res://assets/kenney_particle-pack/PNG (Transparent)/circle_03.png" id="1_vurr7"]
[ext_resource type="Texture2D" uid="uid://bq6orc8m2o0fa" path="res://assets/kenney_particle-pack/PNG (Transparent)/light_02.png" id="2_lih14"]
[ext_resource type="Texture2D" uid="uid://bvioweag0wssg" path="res://assets/kenney_particle-pack/PNG (Transparent)/magic_02.png" id="3_2gvos"]

[sub_resource type="Animation" id="Animation_lih14"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("images/Magic02:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2gvos")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("images/Magic02:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("images:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_vurr7"]
resource_name = "default"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("images/Magic02:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2gvos")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("images/Magic02:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 3.14159, 4.71239, 6.63225, 7.85398]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("images:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 2, 2.5, 3, 4.8, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 1), Vector2(1.4, 1.4), Vector2(1, 1), Vector2(1, 1), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("images/Circle03:modulate")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.9, 1, 1.9, 2, 2.9, 3, 3.9, 4, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("images/Light02:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -1.5708, -3.14159, -4.71239, -6.28319, -7.85398]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("images/Light02:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 2.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.7, 0.7), Vector2(1, 1), Vector2(0.8, 0.8)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.75, 2.5, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"deal_damage"
}, {
"args": [],
"method": &"deal_damage"
}, {
"args": [],
"method": &"deal_damage"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("special_anim:speed_scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("area_dano/collison_dano:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.75, 1, 2.5, 2.75, 4, 4.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2gvos"]
_data = {
&"RESET": SubResource("Animation_lih14"),
&"default": SubResource("Animation_vurr7")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_lih14"]
blend_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_lih14"]
radius = 5.55987

[node name="special" type="Node2D"]
script = ExtResource("1_lih14")
special_damage = 10

[node name="special_anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2gvos")
}
autoplay = "default"
speed_scale = 1.5

[node name="images" type="Node2D" parent="."]
modulate = Color(0.294118, 0.592157, 0.894118, 1)

[node name="Circle03" type="Sprite2D" parent="images"]
modulate = Color(1, 1, 1, 0)
material = SubResource("CanvasItemMaterial_lih14")
texture = ExtResource("1_vurr7")

[node name="Light02" type="Sprite2D" parent="images"]
material = SubResource("CanvasItemMaterial_lih14")
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_lih14")

[node name="Magic02" type="Sprite2D" parent="images"]
material = SubResource("CanvasItemMaterial_lih14")
scale = Vector2(1.8, 1.8)
texture = ExtResource("3_2gvos")

[node name="area_dano" type="Area2D" parent="."]
collision_mask = 2

[node name="collison_dano" type="CollisionShape2D" parent="area_dano"]
modulate = Color(1, 1, 1, 0.235294)
scale = Vector2(61.5133, 61.5133)
shape = SubResource("CircleShape2D_lih14")
disabled = true
debug_color = Color(0.9784, 0, 0.390514, 0.701961)

[connection signal="animation_finished" from="special_anim" to="." method="_on_special_finished"]
[connection signal="body_entered" from="area_dano" to="." method="_on_body_entered"]
